코드 api 구현