@@ -12,7 +12,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
@@ -22,58 +21,61 @@ public class CodeService {
     private final CodeRepository codeRepository;
 
     @Transactional(readOnly = true)
-    public Page<CodeVo> getCodes(int pageNum, int pageSize, String groupCode) {
-        PageRequest pageRequest = PageRequest.of(pageNum - 1, pageSize, Sort.by(Sort.Direction.DESC, "regDate"));
-        if (groupCode != null && !groupCode.isBlank()) {
-            return codeRepository.findByGroupCode(groupCode, pageRequest).map(CodeVo::from);
+    public List<CodeVo> getCodes(int pageNum, int pageSize, String groupCode) {
+        int page = Math.max(0, pageNum - 1);
+        PageRequest pageRequest = PageRequest.of(page, pageSize, Sort.by(Sort.Direction.DESC, "regDate"));
+        Page<Code> codePage;
+
+        if (groupCode != null && !groupCode.isEmpty()) {
+            codePage = codeRepository.findByGroupCode(groupCode, pageRequest);
+        } else {
+            codePage = codeRepository.findAll(pageRequest);
         }
-        return codeRepository.findAll(pageRequest).map(CodeVo::from);
+
+        return codePage.getContent().stream()
+                .map(code -> CodeVo.withChildren(code, List.of()))
+                .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
     public List<CodeVo> getCodeTree(String groupCode) {
-        List<Code> allCodes = codeRepository.findAll();
+        List<Code> allCodes = codeRepository.findAll(Sort.by(Sort.Direction.ASC, "code"));
 
-        // 그룹코드가 빈 문자열인 것이 최상위 코드 (부모)
-        // 자식 코드는 groupCode가 부모의 code와 같은 것
-        Map<String, List<Code>> childrenMap = allCodes.stream()
-                .filter(c -> c.getGroupCode() != null && !c.getGroupCode().isEmpty())
-                .collect(Collectors.groupingBy(Code::getGroupCode));
-
-        List<Code> roots;
-        if (groupCode != null && !groupCode.isBlank()) {
-            roots = allCodes.stream()
-                    .filter(c -> c.getCode().equals(groupCode))
-                    .toList();
-        } else {
-            roots = allCodes.stream()
+        if (groupCode == null || groupCode.isEmpty()) {
+            return allCodes.stream()
                     .filter(c -> c.getGroupCode() == null || c.getGroupCode().isEmpty())
-                    .toList();
+                    .map(root -> mapToTree(root, allCodes))
+                    .collect(Collectors.toList());
+        } else {
+            return allCodes.stream()
+                    .filter(c -> c.getCode().equals(groupCode))
+                    .map(root -> mapToTree(root, allCodes))
+                    .collect(Collectors.toList());
         }
+    }
 
-        return roots.stream()
-                .map(root -> {
-                    List<CodeVo> children = childrenMap.getOrDefault(root.getCode(), List.of())
-                            .stream()
-                            .map(CodeVo::from)
-                            .toList();
-                    return CodeVo.withChildren(root, children);
-                })
-                .toList();
+    private CodeVo mapToTree(Code parent, List<Code> allCodes) {
+        List<CodeVo> children = allCodes.stream()
+                .filter(c -> parent.getCode().equals(c.getGroupCode()))
+                .map(c -> mapToTree(c, allCodes))
+                .collect(Collectors.toList());
+        return CodeVo.withChildren(parent, children);
     }
 
     @Transactional(readOnly = true)
     public CodeVo getCode(String id) {
         Code code = codeRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("코드를 찾을 수 없습니다."));
-        return CodeVo.from(code);
+
+        List<Code> allCodes = codeRepository.findAll(Sort.by(Sort.Direction.ASC, "code"));
+        return mapToTree(code, allCodes);
     }
 
     @Transactional(readOnly = true)
     public List<CodeVo> getCodesByGroupCode(String groupCode) {
         return codeRepository.findByGroupCode(groupCode).stream()
                 .map(CodeVo::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional
@@ -81,7 +83,7 @@ public class CodeService {
         if (codeRepository.existsById(request.code())) {
             throw new IllegalArgumentException("이미 존재하는 코드입니다.");
         }
-        Code code = Code.of(request.code(), request.groupCode(), request.codeName());
+        Code code = Code.of(request.code(), request.groupCode() != null ? request.groupCode() : "", request.codeName());
         return CodeVo.from(codeRepository.save(code));
     }
 
